@@ -1,5 +1,11 @@
 2010-09-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Call RequestGroupMan::fillRequestGroupFromReserver() repeatedly
+	while RequestGroupMan::requestQueueCheck() is true.
+	* src/FillRequestGroupCommand.cc
+
+2010-09-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Use const ref
 	* src/MultiUrlRequestInfo.cc
 
